2004-10-22  Ito Kazumitsu  <kaz@maczuka.gcd.org>

	* libraries/javalib/kaffe/io/CharToByteConverter.java,
	libraries/javalib/kaffe/io/ByteToCharConverter.java:
	(getConverterInternal) Continue if getByteToCharIconv returns null.

2004-10-21  Dalibor Topic  <robilad@kaffe.org>

	* kaffe/kaffevm/gc.h:
	(GarbageCollectorInterface_Ops) Added getHeapFree.
	(KGC_getHeapFree) New macro.

	* kaffe/kaffevm/boehm-gc/gc2.c:
	(KaffeGC_HeapFree) New static function.
	(GarbageCollectorInterface_) Added KaffeGC_HeapFree.

	* kaffe/kaffevm/kaffe-gc/gc-incremental.c:
	(gcGetHeapFree) New static function.
	(GarbageCollectorInterface_) Added gcGetHeapFree.

	* libraries/clib/native/Runtime.c:
	(java_lang_Runtime_freeMemory) Use KGC_getHeapFree.
	(java_lang_Runtime_maxMemory) Return Long.MAX_VALUE if
	memory is unlimited.

	Reported by:  Matthew Toseland <mtoseland@blueyonder.co.uk>

2004-10-21  Dalibor Topic  <robilad@kaffe.org>

	* README: Added ports to x86_64-freebsd and
	i386-darwin.

2004-10-21  Eric Anholt  <eta@lclark.edu>

	* config/x86_64/freebsd2/config.frag,
	config/x86_64/freebsd2/md.c,
	config/x86_64/freebsd2/md.h:
	Added port to amd64-freebsd.

2004-10-21  Eric Anholt  <eta@lclark.edu>

	* kaffe/kaffevm/intrp/methodcalls.c:
	Added missing extern.h include to fix crash on amd64.

2004-10-21  Eric Anholt  <eta@lclark.edu>

	* config/config.alias:
	Added amd64 alias for x86-64.

2004-10-20  Dalibor Topic  <robilad@kaffe.org>

	* tools/gjdoc/javalib/doctranslets/html/allclasses.xsl,
	tools/gjdoc/javalib/doctranslets/html/allpackages.xsl,
	tools/gjdoc/javalib/doctranslets/html/classdoc.xsl,
	tools/gjdoc/javalib/doctranslets/html/descriptor.xsl,
	tools/gjdoc/javalib/doctranslets/html/doctranslet.xsl,
	tools/gjdoc/javalib/doctranslets/html/fulltree.xsl,
	tools/gjdoc/javalib/doctranslets/html/gjdoc.xsl,
	tools/gjdoc/javalib/doctranslets/html/index.xsl,
	tools/gjdoc/javalib/doctranslets/html/index_noframes.xsl,
	tools/gjdoc/javalib/doctranslets/html/packageclasses.xsl,