@@ -50,7 +50,7 @@ java_lang_Float_intBitsToFloat(jint val)
  * in Double.c as well.
  */
 static char *
-toCharArrayWithPrecision(char * buf, jfloat val, jint precision) {
+toCharArrayWithPrecision(char * buf, int len, jfloat val, jint precision) {
  	const jint bits = java_lang_Float_floatToRawIntBits(val);
 	char *s;
 	int k;
@@ -60,16 +60,17 @@ toCharArrayWithPrecision(char * buf, jfloat val, jint precision) {
 	if (bits & FSIGNBIT) {
 		val = -val;
 		*s++ = '-';
+		len--;
 	}
 
 	/* Print in normal or 'scientific' form according to value */
 	if (val == 0.0 || (val >= 1.0e-3 && val < 1.0e7)) {
 		/* Print in decimal notation */
-		sprintf(s, "%.*f", (int) precision, (double) val);
+		snprintf(s, len, "%.*f", (int) precision, (double) val);
 
 		/* Remove trailing zeroes after the decimal point */
 		for (k = strlen(buf) - 1;
-		    buf[k] == '0' && buf[k - 1] != '.';
+		    k > 1 && buf[k] == '0' && buf[k - 1] != '.';
 		    k--) {
 			buf[k] = '\0';
 		}
@@ -77,7 +78,7 @@ toCharArrayWithPrecision(char * buf, jfloat val, jint precision) {
 		char *t, *eptr, *eval;
 
 		/* Print in exponential notation */
-		sprintf(s, "%.*E", (int) precision - 1, (double) val);
+		snprintf(s, len, "%.*E", (int) precision - 1, (double) val);
 
 		/* Find the exponent */
 		eptr = strchr(buf, 'E');
@@ -201,10 +202,14 @@ java_lang_Float_toStringWithPrecision(jfloat val, jint max_precision)
 	jint min_precision = 1;
 	jint precision = 0;
 
+	/* FreeBSD's snprintf dies on very large precision. */
+	if (max_precision > MAXNUMLEN)
+		max_precision = MAXNUMLEN;
+
 	/* perform a binary search over precision. */
 	while (max_precision != min_precision + 1) {
 	    precision = (max_precision + min_precision) / 2;
-	    toCharArrayWithPrecision(buf, val, (int) precision);
+	    toCharArrayWithPrecision(buf, MAXNUMLEN, val, (int) precision);
 
 	    if (valueOfCharArray(buf) != val) {
 		min_precision = precision;
@@ -220,7 +225,7 @@ java_lang_Float_toStringWithPrecision(jfloat val, jint max_precision)
 	 * is not equal to val.
 	 */
 	if (precision == min_precision) {
-	    toCharArrayWithPrecision(buf, val, (int) precision + 1);
+	    toCharArrayWithPrecision(buf, MAXNUMLEN, val, (int) precision + 1);
 	}
 
 	return (checkPtr(stringC2Java(buf)));
